tests/paczka1/fuzzy1/87212834.err
Error in line 5: ox9SVrZntP S300 64,5
Error in line 15: nr1oMakRw A222 60,0
Error in line 30: qrlErWo4HO S300 97,0
